platform/config/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
  labels:
    gateway-access: public
---
apiVersion: v1
kind: Namespace
metadata:
  name: cortex
  labels:
    gateway-access: public
---
apiVersion: v1
kind: Namespace
metadata:
  name: podolog
  labels:
    gateway-access: public
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    gateway-access: public
