platform/config/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: gateway-system
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes: &allowedRoutes
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-access: public
    - name: podolog-https
      protocol: HTTPS
      port: 8443
      hostname: podolog-warsaw.pl
      tls:
        mode: Terminate
        certificateRefs:
          - {group: "", kind: Secret, name: podolog-tls}
      allowedRoutes: *allowedRoutes
    - name: podolog-www-https
      protocol: HTTPS
      port: 8443
      hostname: www.podolog-warsaw.pl
      tls:
        mode: Terminate
        certificateRefs:
          - {group: "", kind: Secret, name: podolog-tls}
      allowedRoutes: *allowedRoutes
    - name: cortex-https
      protocol: HTTPS
      port: 8443
      hostname: cortex-dev.podolog-warsaw.pl
      tls:
        mode: Terminate
        certificateRefs:
          - {group: "", kind: Secret, name: cortex-tls}
      allowedRoutes: *allowedRoutes
